--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,23 +26,21 @@ body {
   @apply bg-neutral-950;
 }
 
-
 .ant-table-wrapper {
-    .ant-table {
-        table-layout: auto !important; /* Permite que las columnas se ajusten a su contenido */
-      }
-    
-      .ant-table-cell,
-      .ant-table-thead > tr > th,
-      .ant-table-tbody > tr > th,
-      .ant-table-tbody > tr > td,
-      tfoot > tr > th,
-      tfoot > tr > td {
-        position: relative;
-        padding: 10px;
-        overflow-wrap: break-word;
-      }
+  .ant-table {
+    table-layout: auto !important; /* Permite que las columnas se ajusten a su contenido */
+  }
 
+  .ant-table-cell,
+  .ant-table-thead > tr > th,
+  .ant-table-tbody > tr > th,
+  .ant-table-tbody > tr > td,
+  tfoot > tr > th,
+  tfoot > tr > td {
+    position: relative;
+    padding: 10px;
+    overflow-wrap: break-word;
+  }
 
   @media (max-width: 1024px) {
     .ant-table-row {
@@ -73,15 +71,31 @@ body {
 
 /* Segment  */
 .ant-segmented {
-  background-color: #0f172a!important;
+  background-color: #0f172a !important;
   color: #6b7280;
 }
 
-.ant-segmented-item:hover:not(.ant-segmented-item-selected):not(.ant-segmented-item-disabled) {
-  color: #e2e8f0!important;
+.ant-segmented-item:hover:not(.ant-segmented-item-selected):not(
+    .ant-segmented-item-disabled
+  ) {
+  color: #e2e8f0 !important;
 }
 
 /* Statistics Card */
+
+.statistic-card {
+  width: 100%;
+  height: 230px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center ;
+  @media (max-width: 640px) { 
+      height: 180px; 
+  }
+}
+
+
 .ant-card .ant-card-body {
   padding: 15px 15px;
 }
